--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
   <script src="script.js" defer></script>
 <head>
-<title>Happy Birthday</title>
+<title>Happy Eid Mubarak!!</title>
 <link rel="icon" type="image/x-icon" href="#1.png">
 <link rel="icon" href="#1.png" class="icon">
 <meta name="description" content="Selamat Hari Raya!!">
