--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
      <div id="kadoIn">
        <!-- Tombol Surat --><img src="https://feeldreams.github.io/kadoin.png"/>
      </div>
-     <p id="ket">Klik Kadonya!</p>
+     <p id="ket">Naufal Hadi Punya Kado Buat Kamu, Klik Kadonya Sekarang!!</p>
 
      <div class="kumpulanstiker">
          <!-- Stiker untuk Konten -->
@@ -49,7 +49,7 @@
      <p id="halo" class="halo"></p>
      
      <div><blockquote id='bq' data-text='.©.'>
-       <p id="kalimat">Aku Punya Sesuatu Buat Kamu</p>
+       <p id="kalimat">Hadi Punya Sesuatu Buat Kamu</p>
 
        <p id="pesan1">Klik Semua Gambar Masjidnya...!!</p>
        <div id="kolombaru">
